# qsweepy-plotting

./: .gitignore  TASKS.md  conf.py  plotly_plot.py  pyproject.toml  requirements.txt  svg_app.py  vplot.py
assets/: modal.css  modal.js  sql-results.css
