[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsweepy-plotting"
version = "0.1.0"
description = "Web plotting app"

authors = [
  { name = "Ilia Besedin", email = "ilia.besedin@gmail.com" },
]

urls = { Homepage = "https://github.com/ooovector/qsweepy-plotting" }

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }