[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsweepy-plotting"
version = "0.1.0"
description = "Web plotting app"

authors = [
  { name = "Ilia Besedin", email = "ilia.besedin@gmail.com" },
]

urls = { Homepage = "https://github.com/ooovector/qsweepy-plotting" }

dependencies = [
  "dash_table~=4.11.3",
  "dash_html_components~=1.1.3",
  "pandas~=2.2.2",
  "pony~=0.7.19",
  "dash~=3.2.0",
  "dash_core_components~=1.16.0",
  "plotly~=5.24.1",
  "webcolors~=24.11.1",
  "numpy~=2.3.2",
  "PyYAML~=6.0.1",
  "exdir~=0.5.0.1",
  "flask~=3.1.1",
  "werkzeug~=3.1.3",
  "waitress~=2.1.2",
  "psycopg2-binary~=2.9.10",
]
